--- a/nrpe.cfg
+++ b/nrpe.cfg
@@ -2,7 +2,7 @@
 # Sample NRPE Config File 
 # Written by: Ethan Galstad (nagios@nagios.org)
 # 
-# Last Modified: 06/23/2001
+# Last Modified: 02-21-2002
 ####################################################
 
 
