--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/nrpe.c)
 AC_CONFIG_HEADER(common/config.h)
-AC_PREFIX_DEFAULT(/usr/local/nnagios)
+AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 dnl Figure out how to invoke "install" and what install options to use.
 
@@ -44,6 +44,10 @@ AC_TRY_COMPILE([#include <stdlib.h>
 
 AC_OUTPUT(Makefile src/Makefile)
 
+echo ""
+echo ""
+echo "Type 'make all' to compile the NRPE daemon and client."
+echo ""
 
 
 
