Doc, sample config, and return code updates

--- a/nrpe.cfg
+++ b/nrpe.cfg
@@ -1,24 +1,30 @@
-####################################################
+#############################################################################
 # Sample NRPE Config File 
 # Written by: Ethan Galstad (nagios@nagios.org)
 # 
-# Last Modified: 02-21-2002
-####################################################
+# Last Modified: 06-01-2002
+#
+# NOTES:
+# This is a sample configuration file for the NRPE daemon.  It needs to be
+# located on the remote host that is running the NRPE daemon, not the host
+# from which the check_nrpe client is being executed.
+#############################################################################
 
 
 
 # PORT NUMBER
 # Port number we should wait for connections on.
-# This must be a non-priveledged port (i.e. > 1024).
+# NOTE: This must be a non-priviledged port (i.e. > 1024).
+# NOTE: This option is ignored if NRPE is running under either inetd or xinetd
 
 server_port=5666
 
 
 
 # SERVER ADDRESS
-# Address that nrpe has to bind to in case there are
-# more as one interface and we do not want nrpe to bind
-# (thus listen) on all interfaces.
+# Address that nrpe should bind to in case there are more than one interface
+# and you do not want nrpe to bind on all interfaces.
+# NOTE: This option is ignored if NRPE is running under either inetd or xinetd
 
 #server_address=192.168.1.1
 
@@ -28,18 +34,21 @@ server_port=5666
 # This is a comma-delimited list of IP address of hosts that are allowed
 # to talk to the NRPE daemon.
 #
-# Note: The daemon only does rudimentary checking of the client's IP
-# address.  I would highly recommend adding entries in your /etc/hosts.allow
-# file to allow only the specified host to connect to the port
-# you are running this daemon on.
+# NOTE: The daemon only does rudimentary checking of the client's IP
+#       address.  I would highly recommend adding entries in your
+#	/etc/hosts.allow file to allow only the specified host to connect
+#	to the port you are running this daemon on.
+#
+# NOTE: This option is ignored if NRPE is running under either inetd or xinetd
 
-allowed_hosts=127.0.0.1,192.168.0.2
+allowed_hosts=127.0.0.1
 
 
 
 # DEBUGGING OPTION
-# This option determines whether or not debugging
-# messages are logged to the syslog facility. 0=off, 1=on
+# This option determines whether or not debugging messages are logged to the
+# syslog facility.
+# Values: 0=debugging off, 1=debugging on
 
 debug=0
 
