--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 ###############################
 # Makefile for NRPE
 #
-# Last Modified: 12-23-2001
+# Last Modified: 07-09-2002
 ###############################
 
 
@@ -18,11 +18,11 @@ CP=@CP@
 
 all: nrpe check_nrpe
 
-nrpe: nrpe.c nrpe.h netutils.c netutils.h $(SRC_COMMON)/common.h $(SRC_COMMON)/config.h
-	$(CC) $(CFLAGS) $(LDFLAGS) $(SOCKETLIBS) nrpe.c netutils.c -o $@
+nrpe: nrpe.c nrpe.h utils.c utils.h $(SRC_COMMON)/common.h $(SRC_COMMON)/config.h
+	$(CC) $(CFLAGS) $(LDFLAGS) $(SOCKETLIBS) nrpe.c utils.c -o $@
 
-check_nrpe: check_nrpe.c netutils.c netutils.h $(SRC_COMMON)/common.h $(SRC_COMMON)/config.h
-	$(CC) $(CFLAGS) $(LDFLAGS) $(SOCKETLIBS) check_nrpe.c netutils.c -o $@
+check_nrpe: check_nrpe.c utils.c utils.h $(SRC_COMMON)/common.h $(SRC_COMMON)/config.h
+	$(CC) $(CFLAGS) $(LDFLAGS) $(SOCKETLIBS) check_nrpe.c utils.c -o $@
 
 clean:
 	rm -f core nrpe check_nrpe
