--- a/configure.in
+++ b/configure.in
@@ -6,7 +6,7 @@ AC_PREFIX_DEFAULT(/usr/local/nagios)
 PKG_NAME=nrpe
 PKG_VERSION="1.6"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="07-08-2002"
+PKG_REL_DATE="12-30-2002"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
@@ -50,11 +50,18 @@ AC_TRY_COMPILE([#include <stdlib.h>
 
 AC_ARG_WITH(nrpe_user,--with-nrpe-user=<user> sets user name to run NRPE,nrpe_user=$withval,nrpe_user=nagios)
 AC_ARG_WITH(nrpe_grp,--with-nrpe-grp=<grp> sets group name to run NRPE,nrpe_grp=$withval,nrpe_grp=nagios)
+AC_ARG_WITH(nrpe_port,--with-nrpe-port=<port> sets port number for NRPE to listen on,nrpe_port=$withval,nrpe_port=5666)
 AC_SUBST(nrpe_user)
 AC_SUBST(nrpe_grp)
+AC_SUBST(nrpe_port)
+AC_DEFINE_UNQUOTED(DEFAULT_SERVER_PORT,"$nrpe_port")
 
 
-AC_OUTPUT(Makefile src/Makefile nrpe.cfg)
+AC_PATH_PROG(PERL,perl)
+AC_OUTPUT(Makefile src/Makefile subst)
+
+perl subst nrpe.cfg
+
 
 
 dnl Review options
@@ -66,6 +73,7 @@ echo ""
 echo " General Options:"
 echo " -------------------------"
 
+AC_MSG_RESULT([ NRPE port:  $nrpe_port])
 AC_MSG_RESULT([ NRPE user:  $nrpe_user])
 AC_MSG_RESULT([ NRPE group: $nrpe_grp])
 
