--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,17 @@
 dnl Process this file with autoconf to produce a configure script.
+
+dnl Disable caching
+define([AC_CACHE_LOAD],)
+define([AC_CACHE_SAVE],)
+
 AC_INIT(src/nrpe.c)
 AC_CONFIG_HEADER(common/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="1.6"
+PKG_VERSION="1.7"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="12-30-2002"
+PKG_REL_DATE="01-06-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
