--- a/common/config.h.in
+++ b/common/config.h.in
@@ -1,8 +1,8 @@
 /************************************************************************
  *
  * NRPE Common Header File
- * Copyright (c) 1999-2002 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 12-30-2002
+ * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
+ * Last Modified: 01-26-2003
  *
  * License:
  *
@@ -27,6 +27,7 @@
 
 #define DEFAULT_SERVER_PORT	@nrpe_port@	/* default port to use */
 
+#undef ENABLE_COMMAND_ARGUMENTS
 
 #undef STDC_HEADERS
 #undef HAVE_STRDUP
