--- a/common/config.h.in
+++ b/common/config.h.in
@@ -46,6 +46,11 @@
 #define GETGROUPS_T ""
 #define RETSIGTYPE ""
 
+#undef HAVE_GETOPT_H
+#ifdef HAVE_GETOPT_H
+#include <getopt.h>
+#endif
+
 #undef HAVE_STRINGS_H
 #undef HAVE_STRING_H
 #ifdef HAVE_STRINGS_H
