--- a/nrpe.cfg.in
+++ b/nrpe.cfg.in
@@ -2,7 +2,7 @@
 # Sample NRPE Config File 
 # Written by: Ethan Galstad (nagios@nagios.org)
 # 
-# Last Modified: 01-26-2003
+# Last Modified: 01-30-2003
 #
 # NOTES:
 # This is a sample configuration file for the NRPE daemon.  It needs to be
@@ -117,9 +117,21 @@ command_timeout=60
 # to match the argument format the plugins expect.  Remember, these are
 # examples only!
 
+# The following examples use hardcoded command arguments...
+
 command[check_users]=@libexecdir@/check_users -w 5 -c 10
 command[check_load]=@libexecdir@/check_load -w 15,10,5 -c 30,25,20
 command[check_disk1]=@libexecdir@/check_disk -w 20 -c 10 -p /dev/hda1
 command[check_disk2]=@libexecdir@/check_disk -w 20 -c 10 -p /dev/hdb1
 command[check_zombie_procs]=@libexecdir@/check_procs -w 5 -c 10 -s Z
 command[check_total_procs]=@libexecdir@/check_procs -w 150 -c 200 
+
+# The following examples allow user-supplied arguments and can
+# only be used if the NRPE daemon was compiled with support for 
+# command arguments *AND* the dont_blame_nrpe directive in this
+# config file is set to '1'...
+
+#command[check_users]=@libexecdir@/check_users -w $ARG1$ -c $ARG2$
+#command[check_load]=@libexecdir@/check_load -w $ARG1$ -c $ARG2$
+#command[check_disk]=@libexecdir@/check_disk -w $ARG1$ -c $ARG2$ -p $ARG3$
+#command[check_procs]=@libexecdir@/check_procs -w $ARG1$ -c $ARG2$ -s $ARG3$
