--- a/configure.in
+++ b/configure.in
@@ -69,6 +69,58 @@ AC_TRY_COMPILE([#include <stdlib.h>
 [AC_DEFINE(SOCKET_SIZE_TYPE, size_t) AC_MSG_RESULT(size_t)],
 [AC_DEFINE(SOCKET_SIZE_TYPE, int) AC_MSG_RESULT(int)])
 
+dnl Does user want to check for SSL?
+AC_ARG_ENABLE(ssl,--enable-ssl enables native SSL support,[
+	if test x$enableval = xyes; then
+		check_for_ssl=yes
+	else
+		check_for_ssl=no
+	fi
+	],check_for_ssl=yes)
+
+dnl Optional SSL library and include paths
+ssl_lib_dir=
+ssl_inc_dir=
+AC_ARG_WITH(ssl-lib,--with-ssl-lib=DIR sets location of the SSL library,[
+	ssl_lib_dir=$withval
+	])
+AC_ARG_WITH(ssl-inc,--with-ssl-inc=DIR sets location of the SSL include files,[
+	ssl_inc_dir=$withval
+	])
+
+dnl Check for SSL support
+dnl Modified version of Mark Ethan Trostler's macro <trostler@juniper.net>
+if test x$check_for_ssl = xyes; then
+	AC_MSG_CHECKING(for SSL)
+	found_ssl=no
+	for dir in $ssl_inc_dir /usr/local/ssl /usr/lib/ssl /usr/ssl /usr/pkg /usr/local /usr; do
+		ssldir="$dir"
+		if test -f "$dir/include/openssl/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$ssldir/include/openssl"
+		        break
+		fi
+		if test -f "$dir/include/ssl.h"; then
+			found_ssl=yes
+			CFLAGS="$CFLAGS -I$ssldir/include"
+		        break
+		fi
+	done
+
+	if test x_$found_ssl != x_yes; then
+        	AC_MSG_ERROR(Cannot find ssl libraries)
+	    else
+	        printf "SSL found in $ssldir\n";
+	        LIBS="$LIBS -lssl -lcrypto";
+		if test x$ssl_lib_dir != x; then
+	        	LDFLAGS="$LDFLAGS -L$ssl_lib_dir";
+		else 
+	        	LDFLAGS="$LDFLAGS -L$ssldir/lib";
+		fi
+		AC_DEFINE_UNQUOTED(HAVE_SSL)
+		AC_SUBST(HAVE_SSL)
+	    fi
+fi
 
 AC_ARG_WITH(nrpe_user,--with-nrpe-user=<user> sets user name to run NRPE,nrpe_user=$withval,nrpe_user=nagios)
 AC_ARG_WITH(nrpe_group,--with-nrpe-group=<group> sets group name to run NRPE,nrpe_grp=$withval,nrpe_grp=nagios)
