--- a/common/config.h.in
+++ b/common/config.h.in
@@ -2,7 +2,7 @@
  *
  * NRPE Common Header File
  * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 03-05-2003
+ * Last Modified: 03-31-2003
  *
  * License:
  *
@@ -34,6 +34,28 @@
 #undef HAVE_STRSTR
 #undef HAVE_STRTOUL 
 #undef HAVE_INITGROUPS
+
+#undef SIZEOF_INT
+#undef SIZEOF_SHORT
+#undef SIZEOF_LONG
+
+/* stupid stuff for u_int32_t */
+#undef U_INT32_T_IS_USHORT
+#undef U_INT32_T_IS_UINT
+#undef U_INT32_T_IS_ULONG
+
+#ifdef U_INT32_T_IS_USHORT
+typedef unsigned short u_int32_t
+typedef short int32_t
+#endif
+#ifdef U_INT32_T_IS_UINT
+typedef unsigned long u_int32_t
+typedef long int32_t
+#endif
+#ifdef U_INT32_T_IS_UINT
+typedef unsigned int u_int32_t
+typedef int int32_t
+#endif
 
 
 #define SOCKET_SIZE_TYPE ""
