--- a/configure.in
+++ b/configure.in
@@ -41,18 +41,36 @@ dnl Define u_int32_t if we don't have it already (Solaris)
 AC_CHECK_SIZEOF(int)
 AC_CHECK_SIZEOF(short)
 AC_CHECK_SIZEOF(long)
-if test "$ac_cv_sizeof_int" = 4 ; then
-	AC_CHECK_TYPE(int32_t, int)
-	AC_CHECK_TYPE(u_int32_t, unsigned int)
-elif test "$ac_cv_sizeof_short" = 4 ; then
-	AC_CHECK_TYPE(int32_t, short)
-	AC_CHECK_TYPE(u_int32_t, unsigned short)
-elif test "$ac_cv_sizeof_long" = 4 ; then
-	AC_CHECK_TYPE(int32_t, long)
-	AC_CHECK_TYPE(u_int32_t, unsigned long)
-else
-	AC_MSG_ERROR([Cannot find a type with size of 32 bits])
+AC_CHECK_TYPE(u_int32_t,unsigned int)
+if test "$ac_cv_type_u_int32_t" = no ; then
+	if test "$ac_cv_sizeof_long" = 4 ; then
+		AC_DEFINE(U_INT32_T_IS_ULONG)
+	else
+		if test "$ac_cv_sizeof_int" = 4 ; then
+			AC_DEFINE(U_INT32_T_IS_UINT)
+		else
+			if test "$ac_cv_sizeof_short" = 4 ; then
+				AC_DEFINE(U_INT32_T_IS_USHORT)
+			fi
+		fi
+	fi
 fi
+
+dnl AC_CHECK_SIZEOF(int)
+dnl AC_CHECK_SIZEOF(short)
+dnl AC_CHECK_SIZEOF(long)
+dnl if test "$ac_cv_sizeof_int" = 4 ; then
+dnl 	AC_CHECK_TYPE(int32_t, int)
+dnl 	AC_CHECK_TYPE(u_int32_t, unsigned int)
+dnl elif test "$ac_cv_sizeof_short" = 4 ; then
+dnl 	AC_CHECK_TYPE(int32_t, short)
+dnl 	AC_CHECK_TYPE(u_int32_t, unsigned short)
+dnl elif test "$ac_cv_sizeof_long" = 4 ; then
+dnl 	AC_CHECK_TYPE(int32_t, long)
+dnl 	AC_CHECK_TYPE(u_int32_t, unsigned long)
+dnl else
+dnl 	AC_MSG_ERROR([Cannot find a type with size of 32 bits])
+dnl fi
 
 dnl Checks for library functions.
 AC_CHECK_LIB(nsl,main,SOCKETLIBS="$SOCKETLIBS -lnsl")
