--- a/configure.in
+++ b/configure.in
@@ -9,9 +9,9 @@ AC_CONFIG_HEADER(common/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="2.0a1"
+PKG_VERSION="2.0b1"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="01-30-2003"
+PKG_REL_DATE="04-03-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
