--- a/configure.in
+++ b/configure.in
@@ -26,7 +26,7 @@ dnl Checks for header files.
 AC_HEADER_STDC
 AC_HEADER_TIME
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS(ctype.h dirent.h errno.h fcntl.h getopt.h grp.h netdb.h pwd.h signal.h strings.h string.h syslog.h unistd.h arpa/inet.h netinet/in.h sys/types.h sys/time.h sys/resource.h sys/wait.h sys/socket.h sys/stat.h)
+AC_CHECK_HEADERS(ctype.h dirent.h errno.h fcntl.h getopt.h grp.h inttypes.h netdb.h pwd.h signal.h stdint.h strings.h string.h syslog.h unistd.h arpa/inet.h netinet/in.h sys/types.h sys/time.h sys/resource.h sys/wait.h sys/socket.h sys/stat.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -46,7 +46,7 @@ dnl Define u_int32_t if we don't have it already (Solaris, etc.)
 AC_CHECK_TYPE(uint32_t,unsigned int)
 AC_CHECK_TYPE(u_int32_t,unsigned int)
 if test "$ac_cv_type_u_int32_t" = no ; then
-	if test "$ac_cv_type_int32_t" = yes ; then
+	if test "$ac_cv_type_u_int32_t" = yes ; then
 		AC_DEFINE(U_INT32_T_IS_UINT32_T)
 	else
 		if test "$ac_cv_sizeof_int" = 4 ; then
@@ -138,7 +138,7 @@ if test x$check_for_ssl = xyes; then
 
 	if test x_$found_ssl != x_yes; then
         	AC_MSG_ERROR(Cannot find ssl libraries)
-	    else
+	else
 	        printf "SSL found in $ssldir\n";
 	        LIBS="$LIBS -lssl -lcrypto";
 		if test x$ssl_lib_dir != x; then
@@ -158,7 +158,7 @@ if test x$check_for_ssl = xyes; then
 			sslbin=$ssldir/bin/openssl
 		fi
 		$sslbin dhparam -out /dev/null -C 512 > src/dh.h
-	    fi
+	fi
 
 	dnl RedHat 8.0 and 9.0 include openssl compiled with kerberos, so we must include header file
 	AC_MSG_CHECKING(for Kerberos include files)
