--- a/Makefile.in
+++ b/Makefile.in
@@ -1,13 +1,13 @@
 ###############################
 # Makefile for NRPE
 #
-# Last Modified: 01-16-2003
+# Last Modified: 10-14-2003
 ###############################
 
 
 # Source code directories
 SRC_BASE=./src/
-SRC_COMMON=./common/
+SRC_INCLUDE=./include/
 
 all:
 	cd $(SRC_BASE); $(MAKE) ; cd ..
@@ -51,7 +51,8 @@ clean:
 
 distclean: clean
 	cd $(SRC_BASE); $(MAKE) $@ ; cd ..
-	rm -f config.log config.status config.cache nrpe.cfg nrpe.xinetd subst $(SRC_COMMON)/config.h init-script init-script.debian init-script.freebsd
+	rm -f config.log config.status config.cache nrpe.cfg nrpe.xinetd subst $(SRC_INCLUDE)/config.h init-script init-script.debian init-script.freebsd
+	rm -f sample-config/*.cfg sample-config/*.xinetd
 	rm -f Makefile
 
 devclean: distclean
