--- a/include/config.h.in
+++ b/include/config.h.in
@@ -2,7 +2,7 @@
  *
  * NRPE Common Header File
  * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 10-13-2003
+ * Last Modified: 11-12-2003
  *
  * License:
  *
@@ -164,6 +164,9 @@ typedef int int32_t;
 #ifdef HAVE_SYS_SOCKET_H
 #include <sys/socket.h>
 #endif
+
+/* Define to 'int' if <sys/socket.h> does not define */
+#undef socklen_t
 
 #undef HAVE_SOCKET_H
 #ifdef HAVE_SOCKET_H
